- Added 'Reaper' variant of Slab drug from Chrome Flesh. Closes #4081
- Added the Toxic tradition.
- Fixed incorrect Karma value for the Sprite Combusion quality.
- Yard lifestyle quality can now be taken multiple times. Fixes incorrect page references for Yard and Zen Den.
- Added new Focus objects in gear.xml to support Individualising Focus rules from Street Grimoire. 

Changed/new strings:
- Checkbox_Options_UnclampAttributeMinimum
- String_ExpenseJoinNetwork
- Checkbox_NetworkSubmersion
- Checkbox_JoinedNetwork
- Checkbox_GroupInitiation
- Checkbox_InitiationOrdeal
- Checkbox_InitiationSchooling
- Checkbox_NetworkSubmersion
- Checkbox_SubmersionTask
- Checkbox_Expense_ForceCareerVisible

Build 211
Application Changes:
- Cyberlimb bonuses are now capped to 4 by default. An optional rule has been added to override this behaviour. Note that the maximum attribute value is still limited to the Total Augmented Maximum of the character's appropriate attribute, irrespective of how the limb arrives at that maximum value. 
- If a Gear object does not have a bonus node but is provided with a select value in data (ie a Camera with select='Rear-Facing'), this value will now be assigned to the Extra value. 
- Implemented bonuses for Spell Descriptors to Damage and Drain. Used by the Witness My Hate quality. The improvement type allows a comma-separated list of values; if a descriptor is wrapped in NOT (ie NOT(Area)), it will be prevented from being taken. Conversely, if a spell does not have the descriptor listed, it will not gain the bonus. 
- Spells now properly show bonuses to Damage provided by improvements.
- Added support for the base initiative dice value being higher than 1. 
- Partial refactor of the karma and priority mode choices into a single creation method to avoid duplicating code.